--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ Pygments==2.19.2
 pytest==9.0.1
 pytest-bdd==8.1.0
 pytest-cov==7.0.0
+pytest-flask==1.3.0
 python-dotenv==1.2.1
 pytokens==0.3.0
 ruff==0.14.7
