--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,18 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Coverage files
+.coverage
+htmlcov/
+
+# Ruff cache
+.ruff_cache/
+
+# Pytest
+.pytest_cache/
+pytest_cache/
+
+
 # Virtual environments
 .venv/
 env/
